Added UI statics hosting capability to the backend itself

--- a/backend/letsgooutdemo.functions/LetsGoOutDemo.Functions.csproj
+++ b/backend/letsgooutdemo.functions/LetsGoOutDemo.Functions.csproj
@@ -17,4 +17,8 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
-</Project>
+  <ItemGroup>
+    <Content Include="wwwroot\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup></Project>
