--- a/frontend/letsgooutdemo.react/package.json
+++ b/frontend/letsgooutdemo.react/package.json
@@ -2,6 +2,7 @@
   "name": "letsgooutdemo.react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/api/ui",
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
     "axios": "^0.19.0",
