--- a/backend/LetsGoOutDemo.Functions/LetsGoOutDemo.Functions.csproj
+++ b/backend/LetsGoOutDemo.Functions/LetsGoOutDemo.Functions.csproj
@@ -18,7 +18,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="wwwroot\**">
+    <Content Include="api\ui\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup></Project>
