added ui statics to ServiceFabric project as well

--- a/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/appsettings.json
+++ b/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "AzureSignalRConnectionString": "your-azure-signalr-service-connection-string",
+  "RedisConnectionString": "your-redis-connection-string"
 }
