--- a/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/Properties/launchSettings.json
+++ b/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:13554",
-      "sslPort": 44357
+      "applicationUrl": "http://localhost:7071"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
