--- a/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore.csproj
+++ b/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.11" />
     <PackageReference Include="Microsoft.Azure.SignalR.Management" Version="1.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.571" />
+    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
   </ItemGroup>
 
 </Project>
