--- a/frontend/letsgooutdemo.react-native/LetsGoOutDemoReactNative/package.json
+++ b/frontend/letsgooutdemo.react-native/LetsGoOutDemoReactNative/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "mobx": "^5.15.4",
