--- a/frontend/letsgooutdemo.react-native/package.json
+++ b/frontend/letsgooutdemo.react-native/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
@@ -16,6 +17,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-elements": "^2.3.2",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
