--- a/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore.csproj
+++ b/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
