upgrade to .NET6

--- a/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/appsettings.json
+++ b/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
 
-  "AzureSignalRConnectionString": "your-azure-signalr-service-connection-string",
-  "RedisConnectionString": "your-redis-connection-string"
+  "AzureSignalRConnectionString": "@KeeShepherd(TinoAzureSignalRConnString)",
+  "RedisConnectionString": "@KeeShepherd(TinoAzureRedisConnString)"
 }
