--- a/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore.csproj
+++ b/backend/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore/LetsGoOutDemo.AspNetCore.csproj
@@ -1,22 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <AssemblyVersion>1.0.0.2</AssemblyVersion>
     <FileVersion>1.0.0.2</FileVersion>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>32571011-fa7b-4a2b-ae6b-d63e09411082</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.10" />
-    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.11" />
-    <PackageReference Include="Microsoft.Azure.SignalR.Management" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.24.0" />
+    <PackageReference Include="Microsoft.Azure.SignalR.Management" Version="1.24.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.571" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
   </ItemGroup>
-
 </Project>
